// Code generated by github.com/tinkler/mqttadmin; DO NOT EDIT.
syntax = "proto3";
option go_package = "github.com/tinkler/mqttadmin/page/v1;page_v1";
option java_multiple_files = true;
option java_package = "ink.sfs.tinkler.mqttadmin.page.v1";
option java_outer_classname = "pageProto";
package page.v1;
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";
import "user/v1/user.proto";

message Page {
	int32 page = 1;
	int32 per_page = 2;
	int32 total = 3;
}

message PageRow {
	int32 row_no = 1;
	map<string,Chapter> chapters = 2;
	map<string,google.protobuf.Value> option = 3;
}

message Chapter {
	int32 index = 1;
	string name = 2;
}

service PageGsrv {
	rpc PageFetchUser (google.protobuf.Any) returns (google.protobuf.Any);
	rpc PageRowGenRow (stream google.protobuf.Any) returns (stream google.protobuf.Any);
	rpc PageRowGenUser (stream google.protobuf.Any) returns (stream google.protobuf.Any);
}
